k8s-setup/manifests/nodejs-goof.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-goof
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-goof
  namespace: nodejs-goof
spec:
  selector:
    matchLabels:
      app: nodejs-goof
  template:
    metadata:
      labels:
        app: nodejs-goof
    spec:
      containers:
      - name: nodejs-goof
        image: iuriikogan/nodejs-goof-insights:v2.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-goof
  namespace: nodejs-goof
  labels:
    app: nodejs-goof
spec:
  type: ClusterIP
  ports:
    - port: 1337
      targetPort: 3001
      protocol: TCP
  selector:
    app: nodejs-goof
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-goof-ingress
  namespace: nodejs-goof
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-goof
            port:
              number: 1337
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: nodejs-goof
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: nodejs-goof
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: nodejs-goof
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: nodejs-goof
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
